--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "From zero to hero with the Reactive Extensions for JavaScript",
   "main": "index.js",
   "scripts": {
-    "start": "parcel ./src/index.html --no-hmr",
+    "start": "parcel ./src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
